base-framework/main/default/objects/ESG_Report_Section__c/ESG_Report_Section__c.object-meta.xml
<CustomObject>
    <label>ESG Report Section</label>
    <nameField>
        <label>ESG Report Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESG Report Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>