base-framework/main/default/objects/ESG_Report_Section__c/fields/ESG_Report__c.field-meta.xml
<CustomField>
    <fullName>ESG_Report__c</fullName>
    <label>ESG Report</label>
    <referenceTo>ESG_Report__c</referenceTo>
    <relationshipLabel>ESG Report Sections</relationshipLabel>
    <relationshipName>ESG_Report_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>