base-framework/main/default/objects/ESG_Report_Section__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ESG Report Sections</relationshipLabel>
    <relationshipName>ESG_Report_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>