base-framework/main/default/objects/ESG_Report_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ESG_Report__c</columns>
    <columns>Section_Status__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Main_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>